--- a/crates/cli/src/wasm_bindgen_test_runner/index-headless.html
+++ b/crates/cli/src/wasm_bindgen_test_runner/index-headless.html
@@ -10,6 +10,7 @@
     <pre id="console_info"></pre>
     <pre id="console_warn"></pre>
     <pre id="console_error"></pre>
+    <pre id="__wbgtest_screenshot" style="display:none"></pre>
     <script>
      const orig = id => (...args) => {
          const logs = document.getElementById(id);
